# apirest

./: Cargo.toml  Dockerfile  docker-compose.yml
db/: postgres.sql
src/: main.rs  util.rs
