[package]
name = "apirest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
time = { version = "0.3.37", features = ["macros", "serde"] }
time-macros = "0.2.19"
tokio = { version = "1.42.0", features = ["full"] }
